# Proof-of-Collaboration

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: crypto_utils.hpp  mempool.hpp  message_types.hpp  miner.hpp  network.hpp  proto_wrapper.hpp  rpc.hpp  share_manager.hpp  string_utils.hpp  template_builder.hpp  transaction_utils.hpp  utxo_set.hpp
src/: cli.cpp  main.cpp  mempool.cpp  message_types.cpp  miner.cpp  network.cpp  rpc.cpp  share_manager.cpp  string_utils.cpp  template_builder.cpp  transaction_utils.cpp  utxo_set.cpp
src/proto/: messages.proto
test/: mempool_test.cpp  miner_test.cpp  network_test.cpp  share_manager_test.cpp  template_builder_test.cpp
